@@ -1,3 +1,8 @@
+2009-01-06  Nicolas Roard <nicolas@roard.com>
+	
+	Fixed broken compilation in NSScrollView and NSBrowser.
+	* use of [[GSTheme theme] sizeForBorderType:]
+
 2008-02-26  Quentin Mathe <qmathe@club-internet.fr>
 
 	Fixed the drawing of progress indicator, it returns YES to -isFlipped now 
